--- a/joe.html
+++ b/joe.html
@@ -8,8 +8,8 @@
 <meta data-react-helmet="true" property="fb:pages" content="299947508549">
 <meta data-react-helmet="true" property="fb:pages" content="455380344852029">
 <meta data-react-helmet="true" property="og:description" content="">
-<meta property="og:image" content="https://jwallis.github.io/joe_files/buyjoe.jpg">
-<meta property="og:image:secure_url" content="https://jwallis.github.io/joe_files/buyjoe.jpg">
+<meta property="og:image" content="https://jwallis.github.io/joe_files/social.jpg">
+<meta property="og:image:secure_url" content="https://jwallis.github.io/joe_files/social.jpg">
 <meta property="og:image:type" content="image/jpeg">
 <meta data-react-helmet="true" property="og:locale" content="en_US">
 <meta data-react-helmet="true" property="og:locale:alternate" content="nl_NL">
